enable mvn deploy

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -109,4 +109,4 @@ jobs:
             echo "::notice:: ### Build of Feature Branch ${BRANCH_NAME}. Version: $BRANCH_MVN_VERSION"
             mvn -B versions:set -e -DnewVersion="$BRANCH_MVN_VERSION"
           fi
-          mvn -B -e install -s $GITHUB_WORKSPACE/settings.xml
+          mvn -B -e deploy -s $GITHUB_WORKSPACE/settings.xml
