--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,6 +38,8 @@ logbook:
       - password
   predicate:
     exclude:
-      - path: /actuator/health          
+      - path: /actuator/health  
+      # this is a workaround to fix logbook bug when log level is set on trace  
+      - path: /web/**    
   
   
