fix unit test for edit beer

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -40,6 +40,7 @@ logbook:
     exclude:
       - path: /actuator/health  
       # this is a workaround to fix logbook bug when log level is set on trace  
-      - path: /web/**    
+      - path: /web/**   
+      - path: /webjars/**   
   
   
