Feature/add edit beer (#10)
* add edit beer

* fix redirect

* fix form problem with logbook

* fix unit test for edit beer

* add unit test for delete beer

* add unit test for create beer

* fix create beer

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,6 +38,9 @@ logbook:
       - password
   predicate:
     exclude:
-      - path: /actuator/health          
+      - path: /actuator/health  
+      # this is a workaround to fix logbook bug when log level is set on trace  
+      - path: /web/**   
+      - path: /webjars/**   
   
   
