--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,15 +5,48 @@
     "config:recommended"
   ],
   "enabledManagers": [
-    "docker-compose"
+    "docker-compose",
+    "maven-wrapper",
+    "kubernetes",
+    "helm-values",
+    "helmv3"
   ],
+  "maven-wrapper": {
+    "managerFilePatterns": [
+      "/(^|/)mvnw$/",
+      "/(^|/)mvnw.cmd$/",
+      "/(^|/).mvn/wrapper/maven-wrapper.properties$/"
+    ],
+    "versioning": "maven"
+  },
   "docker-compose": {
     "enabled": true
   },
-  "docker": {
-    "registryUrls": ["https://index.docker.io"]
+  "kubernetes": {
+    "managerFilePatterns": [
+      "/k8s/.+\\.ya?ml$/",
+      "/helm-charts/templates/.+\\.ya?ml$/"
+    ]
+  },
+  "helm-values": {
+    "managerFilePatterns": [
+      "/helm-charts/.+/values\\.ya?ml$/"
+    ]
+  },
+  "helmv3": {
+    "managerFilePatterns": [
+      "/(^|/)Chart\\.ya?ml$/"
+    ]
   },
   "packageRules": [
+    {
+      "matchCategories": [
+        "docker"
+      ],
+      "registryUrls": [
+        "https://index.docker.io"
+      ]
+    },
     {
       "matchDatasources": [
         "docker"
@@ -24,9 +57,6 @@
       "versioning": "maven",
       "allowedVersions": "/^[0-9]+\\.[0-9]+\\.[0-9]+(-SNAPSHOT)?$/",
       "ignoreUnstable": false,
-      "separateMinorPatch": true,
-      "separateMajorMinor": true,
-      "separatePatchReleases": true,
       "automerge": false,
       "automergeType": "pr",
       "ignoreTests": true
@@ -50,7 +80,7 @@
     "before 5am"
   ],
   "platformAutomerge": false,
-  "dependencyDashboard": false,
+  "dependencyDashboard": true,
   "prHourlyLimit": 0,
   "prConcurrentLimit": 0,
   "baseBranches": [
