--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,13 @@ management:
       exposure:
         include: "*"
   endpoint:
+    configprops:
+      # WARNING: SECURITY RISK - DO NOT USE IN PRODUCTION ENVIRONMENT
+      # This configuration exposes sensitive data and should only be used for development or testing purposes.
+      # Ensure this is disabled in any environment where security is a concern.
+      show-values: ALWAYS
+    env:
+      show-values: always
     health:
       probes:
         enabled: true
@@ -38,10 +45,15 @@ logbook:
       - password
   predicate:
     exclude:
-      - path: /actuator/health  
-      # this is a workaround to fix logbook bug when log level is set on trace  
-      - path: /web/**   
-      - path: /webjars/**   
+      # Exclude HTML-related calls and specific endpoints that Logbook doesn't handle correctly
+      - path: /actuator/health/**
+      - path: /h2-console/**  # Exclude H2 console
+      - path: /swagger-ui/**  # Exclude Swagger UI if used
+      - path: /v3/api-docs/** # Exclude OpenAPI docs if used
+      - path: /favicon.ico
+      - path: /web/**
+      - path: /webjars/**
+        # Add more exclusions as needed
         
 security:
   cors:
