--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -337,9 +337,7 @@ jobs:
   Trigger-Deploy:
     runs-on: ubuntu-latest
     needs: [ setup, build ]
-    # TODO: ENABLE AGAIN
-    #if: github.event_name != 'pull_request'
-    if: false
+    if: github.event_name != 'pull_request'
 
     permissions:
       actions: write
