--- a/.github/workflows/deploy-and-test-cluster.yml
+++ b/.github/workflows/deploy-and-test-cluster.yml
@@ -175,6 +175,32 @@ jobs:
           echo "::notice:: ### Helm Deployed Version: ${{ inputs.version }}"
           echo "::notice:: ### Deployment triggered by workflow ${{ inputs.deployed-by-workflow }}. Run number: ${{ inputs.deployed-by-build }}: $BUILD_LINK"
 
+      - name: Test Application
+        env:
+          APP_VERSION: ${{ inputs.version }}
+          APPLICATION_NAME: ${{ inputs.application-name }}
+          NAMESPACE: ${{ inputs.namespace }}
+        run: |
+          echo "Testing Application $APPLICATION_NAME: $APP_VERSION"
+          TEST_OUTPUT=$(helm test $APPLICATION_NAME --namespace ${NAMESPACE} --logs)
+          TEST_EXIT_CODE=$?
+          
+          echo "::group::Helm Test Raw Output"
+          echo "Exit Code: $TEST_EXIT_CODE"
+          echo "$TEST_OUTPUT"
+          echo "::endgroup::"
+          
+          # Check all test exit codes
+          if echo "$TEST_OUTPUT" | grep -q "Exit code: [^0]"; then
+            echo "::error::One or more Helm tests failed. See details below:"
+            exit 1
+          elif [ $TEST_EXIT_CODE -ne 0 ]; then
+            echo "::error::Helm test command failed with exit code $TEST_EXIT_CODE"
+            exit $TEST_EXIT_CODE
+          else
+            echo "All Helm tests passed successfully."
+          fi      
+
       - name: Display Deployment Information
         env:
           NAMESPACE: ${{ inputs.namespace }}
