--render-subchart-notes

--- a/.github/workflows/deploy-and-test-cluster.yml
+++ b/.github/workflows/deploy-and-test-cluster.yml
@@ -157,7 +157,8 @@ jobs:
           --namespace ${NAMESPACE} \
           --create-namespace \
           --wait --timeout 5m \
-          --debug
+          --debug \
+          --render-subchart-notes
 
       - name: Wait for Pods to be ready
         env:
