--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,2 +1,2 @@
 junit.jupiter.extensions.autodetection.enabled=true
-junit.jupiter.testclass.order.default=guru.springframework.spring6restmvcapi.test.config.TestClassOrderer
+junit.jupiter.testclass.order.default=ch.dboeckli.spring.datarest.test.config.TestClassOrderer
